iOS fixed col for gallery gap

--- a/css/style.css
+++ b/css/style.css
@@ -79,20 +79,20 @@ footer.page-footer {
 
 #photos {
   /* Prevent vertical gaps */
-  line-height: 2; 
+  line-height: 1; 
   
-  -webkit-column-count: 3;
+  -webkit-column-count: 4;
   -webkit-column-gap:   1px;
-  -moz-column-count:    3;
+  -moz-column-count:    4;
   -moz-column-gap:      1px;
-  column-count:         3;
+  column-count:         4;
   column-gap:           1px;
 }
 
 #photos img {
  /* Just in case there are inline attributes */
  width: 80% !important;
- height: 80% !important;
+ height: auto !important;
  min-width: 50px;
  min-height: 50px;
  opacity: 0;
@@ -122,9 +122,9 @@ footer.page-footer {
 }
 @media (max-width: 400px) {
  #photos {
- -moz-column-count:    1;
- -webkit-column-count: 1;
- column-count:         1;
+ -moz-column-count:    2;
+ -webkit-column-count: 2;
+ column-count:         2;
  }
 }
 
